--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@
 # 
 # Installation : ouvrez un terminal et tapez :
 # pip install -r requirements.txt
+# update
+
 
 streamlit>=1.28.0
 pandas>=2.0.0
