--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-reportlab==4.2.5
-openpyxl
-pandas
-plotly
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.17.0
+openpyxl>=3.1.0
+reportlab>=4.0.0
+gspread>=5.12.0
+google-auth>=2.23.0
