--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
-streamlit>=1.28.0
+# L'Atelier de Vincent - Requirements
+# Application de gestion CA avec scanner de factures
+
+# Core Streamlit et données
+streamlit>=1.30.0
 pandas>=2.0.0
-plotly>=5.17.0
-openpyxl>=3.1.0
-reportlab>=4.0.0
+
+# Graphiques et visualisation
+plotly>=5.18.0
+
+# Google Sheets
 gspread>=5.12.0
 google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+google-auth-httplib2>=0.1.1
+
+# Génération de PDF
+reportlab>=4.0.0
+
+# Scanner de factures (NOUVELLES DÉPENDANCES)
+pillow>=10.0.0
+numpy>=1.24.0
+easyocr>=1.7.0
+torch>=2.0.0
+torchvision>=0.15.0
